[tool.poetry]
name = "ml-env"
description = ""
version = "0.0.1"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

# ML & DS
tensorflow = "^2.5.0"
tensorflow-datasets = "^4.3.0"
torch = [
    { url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp38-cp38-linux_x86_64.whl", python = "~3.8", markers = "sys_platform == 'linux'" },
    { url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl", python = "~3.9", markers = "sys_platform == 'linux'" },
    { url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp310-cp310-linux_x86_64.whl", python = "~3.10", markers = "sys_platform == 'linux'" }
]
pytorch-lightning = "^1.6.3"
scikit-learn = "^0.24.2"
pydot = "^1.4.2"
nltk = "^3.6.2"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
wordfreq = "^2.5.0"

# Jupyter & Extensions
jupyterlab = "^3.0.14"
jupyterlab-git = "^0.30.1"
jupyterlab-spellchecker = "^0.5.2"
theme-darcula = "^3.0.0"
jupyterlab-code-formatter = "^1.4.10"
ipywidgets = "^7.6.3"
black = "^21.5b1"
isort = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

